--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "sass": "^1.77.2",
     "sharp": "^0.33.5",
     "stats.js": "^0.17.0",
+    "uuid": "^9.0.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.48.0",
-    "uuid": "^9.0.1"
+    "uws": "^200.0.0"
   },
   "devDependencies": {
     "concurrently": "^9.0.1",
